--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@tensorflow/tfjs-node": "1.4.0",
+    "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "json2csv": "^4.5.4",
     "node-fetch": "^2.6.0"
