--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "dependencies": {
     "@tensorflow/tfjs-node": "1.4.0",
+    "body-parser": "^1.19.0",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "json2csv": "^4.5.4",
     "node-fetch": "^2.6.0"
-  }
+  },
+  "name": "elderman-backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/dnjooiopa/elderman-backend.git",
+  "author": "dnjooiopa <dnjooiopa@gmail.com>",
+  "license": "MIT"
 }
